2019-03-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not attach files in response to clicking a "mailto:" URL

	Only if the URL is passed to Balsa on the command line by "-m"
	or "--compose".

	Also, accept either "attach=" or "attachment=" in a "mailto:"
	URL.

	* src/sendmsg-window.c (sendmsg_window_process_url),
	(sw_attach_file), (sendmsg_window_set_field),
	(set_list_post_rfc2369): attach a file only if the request comes
	from the command line;
	* src/balsa-mime-widget-text.c (url_send_cb), (handle_url): this
	request is not from the command line;
	* src/main.c (balsa_check_open_compose_window): this request is
	from the command line;
	* src/sendmsg-window.h: new argument "gboolean
	from_command_line" for sendmsg_window_process_url() and
	sendmsg_window_set_field().

2019-02-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Simplify handling "mailto:" URLs

	* src/sendmsg-window.c (decode_and_strdup): simplify;
	(sendmsg_window_process_url): drop the "field_setter func"
	argument; it's always "sendmsg_window_set_field";
	(set_list_post_rfc2369): use new API;
	* src/sendmsg-window.h: export new API;
	* src/balsa-mime-widget-text.c (handle_url): use new API;
	* src/main.c (balsa_check_open_compose_window): ditto.

2019-02-24  Pawel Salek  <pawsa0@gmail.com>

	Fix some issues raised by scan-build, the clang static analyzer

	* libbalsa/imap/imap-commands.c (imap_mbox_store_flag): insert
	missing "else";
	* libbalsa/imap/imap-handle.c (imap_get_flag),
	(imap_cmd_get_tag): always null-terminate the string;
	(imap_message_deserialize): omit a dead increment;
	(imap_cmd_exec_cmds): store the return code for return;
	* libbalsa/imap/imap_tst.c (test_mbox_append_common): check the
	return code for error.

2019-02-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	gtk_window_present() will be deprecated in later versions of
	Gtk-2.24, in favor of gtk_window_present_with_time().

	We never have a time-stamp readily available, so just pass